 - C struct dump database has been replaced with sqlite database
 - User configurable data retention durations for all resolutions
 - Full data import from 1.x version database format including reconstructed
   yearly data
 - Add yearly and 5 minute resolution statistics
 - Add pebibyte and exbibyte support
 - Add options the configure the length of each list output
 - Add hourly list output as alternative
 - Remove weekly output
 - Remove merge of data from multiple interfaces to one output
 - Remove --testkernel
 - Remove --exportdb, use --oneline, --json or --xml instead
 - Remove --importdb, -u / --update and related options using vnstat command
 - Remove old style (default in versions up to 1.7) summary layout in
   image output

 - see "Current development status" section in README.md


1.18 / 4-Mar-2018

 - Fix: Misspellings, compiler warnings and possible error situations
   (pull requests by Christian Göttsche)
 - Hardening added to examples/systemd/vnstat.service
   (pull request by Christian Göttsche)
 - Add RTC sanity check and sync wait to daemon startup, the possible wait
   duration can be configured using the TimeSyncWait keyword
 - Add optional parameter to --oneline output for forcing fields to output
   in bytes
 - Add --json support for -l / --live and -tr outputs
 - Number of decimals used in outputs can be configured using DefaultDecimals
   and HourlyDecimals
 - Add section separators for improving readabilty of the vnstat -h output,
   configurable using HourlySectionStyle


1.17 / 16-Feb-2017

 - Fix: --importdb was creating invalid databases since version 1.15
 - Fix: console output was being buffered which resulted in lack of output
   in at least systemd log
 - Add cross-compilation detection and improve install-data-hook to not
   assume that the binaries can be executed in the host system


1.16 / 24-Dec-2016

 - Fix: traffic rate calculation, SI decimal prefixes were shown but
   calculation was done for IEC binary prefixes